--- a/animation.html
+++ b/animation.html
@@ -8,7 +8,7 @@
 <a-scene embedded vr-mode-ui="enabled: false;" arjs="debugUIEnabled: false;">
 
     <a-assets>
-		<img id="earth-sphere" src="images/earth-sphere.jpg" />
+		<img id="earth-sphere" src="https://github.com/stemkoski/AR.js-examples/blob/master/images/earth-sphere.jpg?raw=true" />
 	</a-assets>
 
     <!-- 
